# fingernet-cpp

./: .gitignore  CMakeLists.txt  readme.md
fingernet/: CMakeLists.txt  dllmain.cpp  exports.def
fingernet_example_app/: FingerNet.cs  Program.cs  fingernet_example_app.sln
fingernet_static/: CMakeLists.txt  CMakeRC.cmake  FingerNetModel.cpp  FingerNetModel.h  fingernet.h  fingernet.xml  fingernet_static.cpp  resources_api.hpp
test_project/: CMakeLists.txt  base64_codec.cpp  base64_codec.h  main.cpp
